--- a/resume.html
+++ b/resume.html
@@ -122,8 +122,8 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#education" id="toc-education" class="nav-link active" data-scroll-target="#education">Education</a></li>
   <li><a href="#certifications" id="toc-certifications" class="nav-link" data-scroll-target="#certifications">Certifications</a></li>
+  <li><a href="#experience" id="toc-experience" class="nav-link" data-scroll-target="#experience">Experience</a></li>
   <li><a href="#awards-honors" id="toc-awards-honors" class="nav-link" data-scroll-target="#awards-honors">Awards &amp; Honors</a></li>
-  <li><a href="#institutional-service" id="toc-institutional-service" class="nav-link" data-scroll-target="#institutional-service">Institutional Service</a></li>
   </ul>
 </nav>
     </div>
@@ -151,8 +151,10 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="education" class="level1">
 <h1>Education</h1>
-<p><strong>2024-2025</strong> University of British Columbia Master of Geomatics for Environmental Management</p>
-<p><strong>2015-2020</strong> University of Lethbridge B.Sc. Environmental Science Minor in Small Business Management</p>
+<p><strong>2024-2025</strong> <em>University of British Columbia</em></p>
+<p>Master of Geomatics for Environmental Management</p>
+<p><strong>2015-2020</strong> <em>University of Lethbridge</em></p>
+<p>B.Sc. Environmental Science Minor in Small Business Management</p>
 </section>
 <section id="certifications" class="level1">
 <h1>Certifications</h1>
@@ -164,17 +166,66 @@ ul.task-list li input[type="checkbox"] {
 <li>SCUBA</li>
 </ul>
 </section>
+<section id="experience" class="level1">
+<h1>Experience</h1>
+<p><strong><em>2022-2023</em></strong></p>
+<p><strong>Te’mexw Treaty Association</strong> Victoria, BC</p>
+<p>Project Coordinator</p>
+<ul>
+<li>Managed project logistics with budget of $700,000 including hiring and coordination of contractors and research assistants</li>
+<li>Diligently recorded treaty proceedings and provided succinct post-meeting summaries</li>
+<li>Catalogued historical documents into Sohodocs database</li>
+</ul>
+<p><strong><em>2021-2022</em></strong></p>
+<p><strong>Northern Environmental Action Team</strong> Fort St.&nbsp;John, BC</p>
+<p>Northern Co-Hort &amp; Food Hub Research and Development</p>
+<ul>
+<li>Budgeted and submitted grant proposals for development of Northern Co-Hort &amp; Food Hub extension events</li>
+<li>Developed and marketed virtual farm support events to over 100 local producers</li>
+<li>Identified and fulfilled diverse needs of Co-Hort producer members via regular communications, facilitating student-producer relationships, and client presentations</li>
+<li>Piloted Food Hub program through dinner boxes and aggregated farm products for sale at local markets on behalf of producers and tracked sales data through Microsoft Excel</li>
+</ul>
+<p><em>2021</em></p>
+<p><strong>Northern Environmental Action Team</strong> Fort St.&nbsp;John, BC</p>
+<p>Northern Co-Hort Eco Farm Skills Coordinator</p>
+<ul>
+<li>Coordinated and scheduled a team of 10 dedicated to regenerative agriculture</li>
+<li>Collected soil core samples for Co-Hort research project</li>
+<li>Organized weekly markets and events, including training, product intake and storage, collecting regulatory licenses, invoicing, etc.</li>
+<li>Independently updated existing orientation materials and management toolsets to facilitate training sessions Communicated expertise of sustainable agriculture practices to community</li>
+</ul>
+<p><em>2021</em></p>
+<p><strong>Fort St.&nbsp;John Association for Community Living</strong> Fort St.&nbsp;John, BC</p>
+<p>Growing Conections Farm Coordinator</p>
+<ul>
+<li>Designed and created therapeutic farm for individuals living with disabilities</li>
+<li>Taught farm clients ecological farm techniques and practices, including soil health, sheet mulch and hugelkultur beds, and sheep care</li>
+<li>Performed strenuous physical activities including lifting, digging, mulching, and planting during various weather conditions</li>
+</ul>
+<p><em>2019-2020</em></p>
+<p><strong>Interfaith Food Bank</strong> Lethbridge, AB</p>
+<p>Food Recovery Program Research and Development</p>
+<ul>
+<li>Developed new food recovery program and authored program manual</li>
+<li>Implemented new program independently while facilitating volunteers</li>
+<li>Formulated strategy for affordable market concept for transformed product</li>
+</ul>
+<p><em>2017</em></p>
+<p><strong>AAFC Lethbridge Research and Development Center</strong> Lethbridge, AB</p>
+<p>Research Assistant</p>
+<ul>
+<li>Gathered and repaired pitfall traps in remote agriculture fields around Southern Alberta</li>
+<li>Assembled and assisted with design of modified Berlese funnels</li>
+<li>Identified various species of arthropods under microscope using dichotomous key</li>
+<li>Collected and maintained arthropod colony</li>
+<li>Recorded detailed field notes</li>
+</ul>
+</section>
 <section id="awards-honors" class="level1">
 <h1>Awards &amp; Honors</h1>
 <ul>
 <li>University of Lethbridge Supporting Our Students Scholarship</li>
 <li>Finalist for The Bridge National Short Story Competition</li>
-</ul>
-</section>
-<section id="institutional-service" class="level1">
-<h1>Institutional Service</h1>
-<ul>
-<li>Volunteering etc.</li>
 </ul>
 
 
