--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ ul.task-list li input[type="checkbox"] {
   </div>
 </header>
     <div class="about-links">
-  <a href="https://www.linkedin.com/in/ramon-melser-666932129/" class="about-link" rel="" target="">
+  <a href="https://www.linkedin.com/in/adelyn-chapman-695194346/" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
@@ -143,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
 </div>
   </div>
   <div class="about-contents"><main class="content" id="quarto-document-content">
-<p>Hi, this is Addy! Welcome to my E-Portfolio landing page! I am an environmental professional located Canada with a career goal of protecting, restoring, and reclaiming the natural world. I graduated with a Master’s of Geomatics for Environmental Management from the University of British Columbia in 2025 and a B.Sc. in Environmental Science from the University of Lethbridge in 2020. I have previously worked for Indigenous governments and not-for-profits to advance my career goals. In my free time, I enjoy camping, hiking, kayaking, and playing games.</p>
+<p>Hi, this is Addy! Welcome to my E-Portfolio landing page! I am an environmental professional located Canada with a career goal of protecting, restoring, and reclaiming the natural world. I graduated with a Master’s of Geomatics for Environmental Management from the University of British Columbia in 2025 and a B.Sc. in Environmental Science from the University of Lethbridge in 2020. I have previously worked for Indigenous governments and not-for-profits to advance my career goals. In my free time, I enjoy camping, hiking, kayaking, and climbing.</p>
 
 
 </main></div>
